--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,6 +1,15 @@
 {% extends "books/base.html" %}
 {% block content %}
-    <div class="alert alert-info">
-        An email has been sent with instructions to reset your password
-    </div>
+<div class="container rounded-2 p-2 bg-info">
+	<div class="alert alert-info">
+		An email has been sent with instructions to reset your password
+	</div>
+	<div class="mt-2 text-center p-2">
+		<p>Check your email inbox, if your email exists in our database you will receive an email with instructions on how
+			to reset your account password.</p>
+		<div class="d-flex justify-content-center">
+			<a href="{% url 'login' %}" class="btn btn-primary">Go back to our login page</a>
+		</div>
+	</div>
+</div>
 {% endblock content %}
