--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -75,7 +75,7 @@
     </nav>
 
   </header>
-  <main role="main" class="container flex-grow-1">
+  <main role="main" class="container flex-grow-1 mb-2">
     <div class="row">
       <div class="col-12 mx-auto">
         {% if messages %}
