--- a/static/main.css
+++ b/static/main.css
@@ -210,6 +210,77 @@ main{
   background: rgba(252, 250, 250, 0.808);
 }
 
+/*---------------------------------------- Login */
+
+.login-container {
+  margin-top: 1rem;
+  margin-bottom: 1.2rem;
+  background-image: url('images/assets/library-2507902_640.webp'); /* Adjust the path as needed */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 40rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.login-content {
+  width: 70%;
+  background: rgba(252, 250, 250, 0.808); /* Semi-transparent white */
+  padding: 2rem;
+  border-radius: 10px; /* Rounded borders */
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Soft shadow for depth */
+}
+
+.form-login {
+  background: transparent;
+}
+
+.form-group .btn {
+  display: block; /* Ensure buttons are full-width on mobile */
+  width: 100%; /* Full width for mobile-first approach */
+  margin-top: 0.5rem; /* Space above each button */
+  margin-bottom: 0.5rem; /* Space below each button */
+}
+
+/* Register */
+
+/* Base styles for mobile */
+.register-container {
+  padding: 1rem;
+}
+
+.register-card {
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(8px);
+}
+
+.register-form .register-submit {
+  padding: 0.5rem 1rem;
+  margin-top: 0.5rem;
+  width: 100%; /* Full width */
+}
+
+/* password reset */
+
+.password-container{
+  width: 100%;
+  height: 30rem;
+  padding: 3rem;
+  background: var(--container-dark);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.password-container form{
+  width: 90%;
+  padding: 4rem;
+  background:var(--container-light);
+  border-radius: 1rem;
+}
 /*--------------------------------------------- Messagin app----------------------------------- */
 
 .conversation-container{
@@ -329,6 +400,7 @@ main{
   width: 20.625rem;
   height: 31.25rem;
   border: none;
+
 }
 
 .home-card .face{
@@ -458,5 +530,27 @@ main{
 .logout-content{
   width:  30%;
   height: 30%;
+}
+
+/* --------------------------login */
+.login-container {
+  margin-top: 3rem;
+  margin-bottom: 3.2rem;
+  height: 60rem;
+}
+
+/* register */
+.register-container {
+  padding: 2rem;
+}
+
+.register-card {
+  max-width: 500px; /* Adjust card size for larger screens */
+  margin: auto; /* Center the card */
+}
+
+.register-form .register-submit {
+  padding: 0.75rem 1.5rem; /* Larger padding for larger screens */
+  font-size: 1.2rem; /* Larger font size */
 }
 }
