--- a/users/templates/users/Admin_users.html
+++ b/users/templates/users/Admin_users.html
@@ -1,35 +1,35 @@
 {% extends 'books/base.html' %}
 {% block content %}
-<div>
-  <form method="GET" action="{% url 'admin_users' %}">
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Search User" name="q" value="{{ request.GET.q }}">
-    <button class="btn btn-outline-secondary" type="submit">Search</button>
+<div class="container mb-2">
+  <div>
+    <form method="GET" action="{% url 'admin_users' %}">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Search User" name="q" value="{{ request.GET.q }}">
+        <button class="btn btn-secondary" type="submit">Search</button>
+      </div>
+    </form>
+    <a href="{% url 'admin_users' %}" class="btn btn-primary mb-3">Clear Search</a>
   </div>
-  </form>
-  <a href="{% url 'admin_users' %}" class="btn btn-outline-info mb-3">Clear Search</a>
+  <h2 class="text-center">User List</h2>
+  <div class="table-responsive rounded-2  ">
+    <table class="table text-center">
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in users %}
+        <tr>
+          <td>{{ user.username }}</td>
+          <td>
+            <a href="{% url 'user_detail' user.id %}" class="btn btn-info ">Details</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
-<h2>User List</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Email</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for user in users %}
-    <tr>
-      <td>{{ user.username }}</td>
-      <td>{{ user.email }}</td>
-      <td>
-        <a href="{% url 'user_detail' user.id %}" class="btn btn-info">Details</a>
-        <a href="{% url 'edit_user' user.id %}" class="btn btn-primary">Edit</a>
-        <a href="{% url 'delete_user' user.id %}" class="btn btn-danger">Delete</a>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
 {% endblock %}
