--- a/users/templates/users/User_detail.html
+++ b/users/templates/users/User_detail.html
@@ -1,9 +1,119 @@
-{% extends 'books/base.html' %}
+{% extends "books/base.html" %}
+{% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
-    <h2>Detalles del Usuario: {{ user.username }}</h2>
-    <p>Email: {{ user.email }}</p>
-    <!-- Aquí puedes añadir más detalles del usuario -->
-    <a href="{% url 'edit_user' user.id %}" class="btn btn-primary">Editar Usuario</a>
-    <a href="{% url 'delete_user' user.id %}" class="btn btn-danger">Eliminar Usuario</a>
-    <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Back</button>
-{% endblock %}
+
+<div class="container mt-4 border border-3 border-black rounded-4 bg-body-secondary">
+  <div class="row p-4">
+    <!-- Link to edit profile -->
+    <div class="col-md-4">
+      <div class="card mb-4">
+        <div class="card-body text-center">
+          <img class="rounded-circle account-img pt-1" src="{{ user.profile.image.url }}">
+          <div class="media-body">
+            <h2 class="account-heading">{{ user.username }}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
+            <a href="{% url 'edit_profile' %}" class="btn btn-info">Edit Profile</a>
+            <a href="{% url 'delete_user' user.id %}" class="btn btn-danger">Delete Account</a>
+          </div>
+          <div class="mt-2">
+            <a class="btn btn-success" href="{% url 'inbox' %}">Inbox</a>
+            <a class="btn btn-warning" href="{% url 'admin_users' %}">Back</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Currently Rented Books -->
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h3 class="text-center">Currently Rented Books</h3>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table text-center">
+              <thead>
+                <tr class="align-middle">
+                  <th>Cover</th>
+                  <th>Book Name</th>
+                  <th>Rented On</th>
+                  <th>Return By</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for rental in current_rentals %}
+                <tr class="align-middle">
+                  <td class="book-cover-container">
+                    {% if rental.book.cover_image %}
+                    <img src="{{ rental.book.cover_image.url }}" alt="{{ rental.book.name }}" class="book-cover">
+                    {% else %}
+                    <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image">
+                    {% endif %}
+                  </td>
+                  <td>{{ rental.book.name }}</td>
+                  <td>{{ rental.rental_date }}</td>
+                  <td>{{ rental.return_date }}</td>
+                  <td><a href="{% url 'return_book' rental.id %}" class="btn btn-sm btn-outline-secondary">Return
+                      Book</a>
+                  </td>
+                </tr>
+                {% empty %}
+                <tr>
+                  <td colspan="5">No currently rented books.</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Rented Books History -->
+    <div class="col-12 mt-4">
+      <div class="card">
+        <div class="card-header">
+          <h3 class="text-center">Rented Books History</h3>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table text-center">
+              <thead>
+                <tr class="align-middle">
+                  <th>Cover</th>
+                  <th>Book Name</th>
+                  <th>Rented On</th>
+                  <th>Returned On</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for rental in past_rentals %}
+                <tr class="align-middle">
+                  <td>
+                    <div class="book-cover-container">
+                      {% if rental.book.cover_image %}
+                      <img src="{{ rental.book.cover_image.url }}" alt="{{ rental.book.name }}" class="book-cover">
+                      {% else %}
+                      <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image" class="book-cover">
+                      {% endif %}
+                    </div>
+                  </td>
+                  <td>{{ rental.book.name }}</td>
+                  <td>{{ rental.rental_date }}</td>
+                  <td>{{ rental.actual_return_date }}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                  <td colspan="4">No past rentals.</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% endblock content %}
