--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,18 +2,18 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid vh-100">
-    {% for post in posts %}
-    <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-        <div class="media-body">
-            <div class="article-metadata">
-                <p class="mr-2">by {{ post.author }}</p>
-                <small class="text-muted">{{ post.date_posted|date:'dS, F, Y' }}</small>
-            </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-        </div>
-    </article>
-    {% endfor %}
+	{% for post in posts %}
+	<article class="media content-section">
+		<img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+		<div class="media-body">
+			<div class="article-metadata">
+				<p class="mr-2">by {{ post.author }}</p>
+				<small>{{ post.date_posted|date:'dS, F, Y' }}</small>
+			</div>
+			<h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+			<p class="article-content">{{ post.content }}</p>
+		</div>
+	</article>
+	{% endfor %}
 </div>
 {% endblock content %}
