--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -49,7 +49,7 @@
 <div class="row">
   {% for book in books %}
   <div class="col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-center flex-md-row flex-md-wrap">
-    <div class="home-card m-2 mt-md-3">
+    <div class="home-card ms-4 ms-md-0 m-2 mt-md-3">
       <div class="face front">
         {% if book.cover_image %}
         <img src="{{ book.cover_image.url }}" alt="{{ book.name }}" class="img-fluid">
