--- a/static/main.css
+++ b/static/main.css
@@ -10,11 +10,13 @@
   scroll-behavior: smooth;
 }
 
+
 :root {
-  --bg-dark: #966C47;
-  --bg-light: white;
-  --container-light: #6085A6;
-  --container-dark: #2C75DB;
+  /* Colors */
+  --bg-first: radial-gradient(circle at 50% 50%, rgba(255, 235, 59, 1) 20%, rgba(3, 169, 244, 1) 80%);
+  --bg-second: radial-gradient(circle, rgba(164,163,189,1) 0%, rgba(204,40,118,1) 35%, rgba(116,134,138,1) 100%);
+  --container-first: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
+  --container-second: linear-gradient(90deg, rgba(180,171,204,1) 0%, rgba(43,207,25,1) 35%, rgba(210,153,209,1) 100%);;
   --border: #038282;
   --text-color: black;
   --title-color: black;
@@ -31,23 +33,14 @@
   --fs-h4-mobile: 1.2rem;
   --fs-h5-mobile: 1.1rem;
 
-  /*  Tablets */
-  --fs-sm-tablet: .9rem;
-  --fs-p-tablet: 1rem;
-  --fs-h1-tablet: 2.5rem;
-  --fs-h2-tablet: 2.3rem;
-  --fs-h3-tablet: 2.1rem;
-  --fs-h4-tablet: 1.8rem;
-  --fs-h5-tablet: 1.5rem;
-
   /*  Laptops - Desktops */
   --fs-sm-laptop: .9rem;
   --fs-p-laptop: 1.2rem;
-  --fs-h1-laptop: 4rem;
-  --fs-h2-laptop: 3.5rem;
-  --fs-h3-laptop: 3rem;
-  --fs-h4-laptop: 2.5rem;
-  --fs-h5-laptop: 2rem;
+  --fs-h1-laptop: 3rem;
+  --fs-h2-laptop: 2.5rem;
+  --fs-h3-laptop: 2rem;
+  --fs-h4-laptop: 1.5rem;
+  --fs-h5-laptop: 1.2rem;
 }
 
 /* Scroll bar */
@@ -65,18 +58,45 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--container-dark);
 }
-
+/*----------------------------------------------------------------------------- Body and Main */
 body{
-  background: radial-gradient(circle at 50% 50%, rgba(255, 235, 59, 1) 20%, rgba(3, 169, 244, 1) 80%);
-  color: black;
+  background: var(--bg-first);
+  color: var(--text-color);
 }
 
 main{
   margin-top: 5rem;
 }
 
-/* Navbar */
+h1{
+  font-size: var(--fs-h1-mobile);
+}
 
+h2{
+  font-size: var(--fs-h2-mobile);
+}
+
+h3{
+  font-size: var(--fs-h2-mobile);
+}
+
+h4{
+  font-size: var(--fs-h4-mobile);
+}
+
+h5{
+  font-size: var(--fs-h5-mobile);
+}
+
+p{
+  font-size: var(--fs-p-mobile);
+}
+
+small{
+  font-size: var(--fs-sm-mobile);
+}
+
+/* Navbar */
 
 .navbar-nav .nav-link,
 .navbar .dropdown-item
@@ -94,273 +114,6 @@ main{
   color: red;
 }
 
-
-/* ------------------Blog----------------------------- */
-
-  /* Containers */
-  .content-section {
-    background: var(--container-light);
-    padding: 10px 20px;
-    border: 2px solid var(--border);
-    border-radius: 10px;
-    margin-bottom: 20px;
-    color:var(--text-color);
-  }
-  
-  .article-title {
-    color: #444444;
-  }
-  
-  a.article-title:hover {
-    color: #428bca;
-    text-decoration: none;
-  }
-  
-  .article-content {
-    white-space: pre-line;
-  }
-  
-  .article-img {
-    height: 65px;
-    width: 65px;
-    margin-right: 16px;
-  }
-  
-  .article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
-  }
-  
-  .article-metadata a:hover {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-  }
-  
-  .account-img {
-    height: 125px;
-    width: 125px;
-    margin-right: 20px;
-    margin-bottom: 16px;
-  }
-  
-  .account-heading {
-    font-size: 2.5rem;
-  }
-
-  .custom-comment, .reply {
-    background-color: rgba(0,0,0,0.1); 
-    padding: 1rem;
-    border: .1rem solid black;
-    border-radius: .315rem;
-    margin-bottom: .625rem;
-}
-
-.reply {
-    background-color:  rgba(0,0,0,0.3);
-    padding: 1rem;
-    border-radius: .315rem;
-    margin-bottom: .625rem;
-    margin-left: 1.3rem;
-}
-
-.comment-actions a {
-  margin-right: 5px;
-}
-
-
-/* About */
-
-.about-container{
-  background: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
-}
-
-.about-container-offer{
-  background: linear-gradient(90deg, rgba(255, 235, 59, 1) 0%, rgba(3, 169, 244, 1) 100%);
-}
-
-.about-container-offer .list-group-item{
-  background-color: transparent;
-  border: none;
-}
-/*---------------------------------------- Logout */
-
-.logout-container{
-  margin-top: 1rem;
-  margin-bottom: 1.2rem;
-  background-image: url('images/assets/books-2596809_640.webp');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 30rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.logout-content{
-  width:  70%;
-  height: 15rem;
-  background: rgba(252, 250, 250, 0.808);
-}
-
-/*---------------------------------------- Login */
-
-.login-container {
-  margin-top: 1rem;
-  margin-bottom: 1.2rem;
-  background-image: url('images/assets/library-2507902_640.webp'); /* Adjust the path as needed */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 40rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-}
-
-.login-content {
-  width: 70%;
-  background: rgba(252, 250, 250, 0.808); /* Semi-transparent white */
-  padding: 2rem;
-  border-radius: 10px; /* Rounded borders */
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Soft shadow for depth */
-}
-
-.form-login {
-  background: transparent;
-}
-
-.form-group .btn {
-  display: block; /* Ensure buttons are full-width on mobile */
-  width: 100%; /* Full width for mobile-first approach */
-  margin-top: 0.5rem; /* Space above each button */
-  margin-bottom: 0.5rem; /* Space below each button */
-}
-
-/* Register */
-
-/* Base styles for mobile */
-.register-container {
-  padding: 1rem;
-}
-
-.register-card {
-  background-color: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(8px);
-}
-
-.register-form .register-submit {
-  padding: 0.5rem 1rem;
-  margin-top: 0.5rem;
-  width: 100%; /* Full width */
-}
-
-/* password reset */
-
-.password-container{
-  width: 100%;
-  height: 30rem;
-  padding: 3rem;
-  background: var(--container-dark);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.password-container form{
-  width: 90%;
-  padding: 4rem;
-  background:var(--container-light);
-  border-radius: 1rem;
-}
-/*--------------------------------------------- Messagin app----------------------------------- */
-
-.conversation-container{
-  background: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
-}
-
-.messages {
-  background-color: #428bca;
-  border-radius: 1rem;
-  min-height: 650px;
-  padding: 1.2rem;
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-}
-
-.sent-message, .received-message {
-  width: 50%;
-  display: flex;
-  flex-direction: column; 
-  align-items: center; 
-  margin: 1rem;
-  padding: 1rem;
-  border-radius: 3rem;
-}
-
-.sent-message {
-  background-color: #DCF8C6;
-  margin-left: 0;
-  margin-right: auto;
-}
-
-.received-message {
-  background-color: #ECE5DD;
-  margin-right: 0; 
-  margin-left: auto; 
-}
-
-/* Send Message */
-.custom-textarea {
-  resize: none; 
-  width: 100%; 
-}
-
-.message-container {
-  background: linear-gradient(90deg, rgba(255, 235, 59, 1) 0%, rgba(3, 169, 244, 1) 100%);
-  min-height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.message-box {
-  background: radial-gradient(circle at 50% 50%, rgba(255, 235, 59, 1) 20%, rgba(233, 30, 99, 1) 80%);
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 600px;
-}
-
-
-/*----------------------------------------------- Profile--------------------------------------- */
-
-/* ------------------------------------------------Book cover */
-
-
-
-/* Details */
-
-/* Tables */
-.book-cover-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.book-cover {
-  max-height: 100px;
-  max-width: 100px;
-}
-
 /*  -----------------------------------------------Django Messages----------------------------*/
 
 .alert {
@@ -369,30 +122,29 @@ main{
   list-style: none;
 }
 
+
 /* --------------------------------------------------Home */
 
 .home-container{
-  background: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
-  color: black;
+  background: var(--bg-second);
 }
 
   /* Carrousel */
 
-/* Estilos personalizados para el carrusel */
 #bookCarousel {
-  background-color: black; /* Fondo gris para el contenedor */
+  background-color: black; 
 }
 
 #bookCarousel .carousel-inner {
-  text-align: center; /* Centrar el contenido */
+  text-align: center; 
 }
 
 #bookCarousel .carousel-item img {
-  max-width: 100%; /* Asegurarse de que las imágenes no se desborden */
-  margin: 0 auto; /* Centrar horizontalmente las imágenes */
+  max-width: 100%; 
+  margin: 0 auto; 
 }
 
-
+/*------------------------------------------------------- Books Details */
 /* Cards */
 
 .home-card{
@@ -463,6 +215,269 @@ main{
 }
 
 
+/* ------------------Blog----------------------------- */
+
+  /* Containers */
+  .content-section {
+    background: var(--container-first);
+    padding: 10px 20px;
+    border: 2px solid var(--border);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    color:var(--text-color);
+  }
+  
+  .article-title {
+    color: white;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  a.article-title:hover {
+    color: #428bca;
+  }
+  
+  .article-content {
+    white-space: pre-line;
+  }
+  
+  .article-img {
+    height: 65px;
+    width: 65px;
+    margin-right: 16px;
+  }
+  
+  .article-metadata {
+    color: var(--text-color);
+    padding-bottom: 1px;
+    margin-bottom: 4px;
+    border-bottom: 1px solid #e3e3e3
+  }
+  
+  .article-svg {
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+  }
+  
+  .account-img {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+  }
+  
+  .account-heading {
+    font-size: 2.5rem;
+  }
+
+  .custom-comment, .reply {
+    background-color: rgba(0,0,0,0.1); 
+    padding: 1rem;
+    border: .1rem solid black;
+    border-radius: .315rem;
+    margin-bottom: .625rem;
+}
+
+.reply {
+    background-color:  rgba(0,0,0,0.3);
+    padding: 1rem;
+    border-radius: .315rem;
+    margin-bottom: .625rem;
+    margin-left: 1.3rem;
+}
+
+.comment-actions a {
+  margin-right: 5px;
+}
+
+
+/* About */
+
+.about-container{
+  background: var(--container-second);
+}
+
+.about-container-offer{
+  background: var(--container-first);
+}
+
+.about-container-offer .list-group-item{
+  background-color: transparent;
+  border: none;
+}
+/*---------------------------------------- Logout */
+
+.logout-container{
+  margin-top: 1rem;
+  margin-bottom: 1.2rem;
+  background-image: url('images/assets/books-2596809_640.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 30rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logout-content{
+  width:  70%;
+  height: 15rem;
+  background: rgba(252, 250, 250, 0.808);
+}
+
+/*---------------------------------------- Login */
+
+.login-container {
+  margin-top: 1rem;
+  margin-bottom: 1.2rem;
+  background-image: url('images/assets/library-2507902_640.webp'); /* Adjust the path as needed */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 40rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.login-content {
+  width: 70%;
+  background: rgba(252, 250, 250, 0.808); /* Semi-transparent white */
+  padding: 2rem;
+  border-radius: 10px; /* Rounded borders */
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Soft shadow for depth */
+}
+
+.form-login {
+  background: transparent;
+}
+
+.form-group .btn {
+  display: block; /* Ensure buttons are full-width on mobile */
+  width: 100%; /* Full width for mobile-first approach */
+  margin-top: 0.5rem; /* Space above each button */
+  margin-bottom: 0.5rem; /* Space below each button */
+}
+
+/* Register */
+
+.register-container {
+  padding: 1rem;
+}
+
+.register-card {
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(8px);
+}
+
+.register-form .register-submit {
+  padding: 0.5rem 1rem;
+  margin-top: 0.5rem;
+  width: 100%; /* Full width */
+}
+
+/* password reset */
+
+.password-container{
+  width: 100%;
+  height: 30rem;
+  padding: 3rem;
+  background: var(--container-dark);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.password-container form{
+  width: 90%;
+  padding: 4rem;
+  background:var(--container-light);
+  border-radius: 1rem;
+}
+/*--------------------------------------------- Messagin app----------------------------------- */
+
+.conversation-container{
+  background: var(--bg-second);
+}
+
+.messages {
+  background-color: #428bca;
+  border-radius: 1rem;
+  min-height: 40.625rem;
+  padding: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.sent-message, .received-message {
+  width: 50%;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 3rem;
+}
+
+.sent-message {
+  background-color: #DCF8C6;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.received-message {
+  background-color: #ECE5DD;
+  margin-right: 0; 
+  margin-left: auto; 
+}
+
+/* Send Message */
+.custom-textarea {
+  resize: none; 
+  width: 100%; 
+}
+
+.message-container {
+  background: var(--bg-first);
+  min-height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.message-box {
+  background: var(--bg-second);
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  width: 100%;
+  max-width: 600px;
+}
+
+
+/*----------------------------------------------- Profile--------------------------------------- */
+
+/* ------------------------------------------------Book cover */
+
+
+
+/* Details */
+
+/* Tables */
+.book-cover-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.book-cover {
+  max-height: 100px;
+  max-width: 100px;
+}
+
+
 /* Table description responsive */
 
 .desc-limited {
@@ -518,6 +533,35 @@ main{
 
 /* ----------------------------------------------------------large screens------------------------------------------------------------ */
 @media only screen and (min-width: 768px){ 
+
+  /* Test sizes */
+  h1{
+    font-size: var(--fs-h1-laptop);
+  }
+  
+  h2{
+    font-size: var(--fs-h2-laptop);
+  }
+  
+  h3{
+    font-size: var(--fs-h3-laptop);
+  }
+  
+  h4{
+    font-size: var(--fs-h4-laptop);
+  }
+  
+  h5{
+    font-size: var(--fs-h5-laptop);
+  }
+  
+  p{
+    font-size: var(--fs-p-laptop);
+  }
+  
+  small{
+    font-size: var(--fs-sm-laptop);
+  }
   /*---------------------------------------- Logout */
 
   .logout-container{
