--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -16,13 +16,13 @@
     <!-- Fieldset for User Information -->
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">User Information</legend>
-      {{ u_form|crispy }} <!-- UserUpdateForm rendered with crispy forms -->
+      {{ u_form|crispy }}
     </fieldset>
 
     <!-- Fieldset for Profile Image -->
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Profile Picture</legend>
-      {{ p_form|crispy }} <!-- ProfileUpdateForm rendered with crispy forms -->
+      {{ p_form|crispy }}
     </fieldset>
 
     <!-- Submit Button -->
