--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -54,7 +54,7 @@
       </div>
     </nav>
   </header>
-  <main role="main" class="container vh-100">
+  <main role="main" class="container vh-100 mb-3">
     <div class="row">
       <div class="col-md-12">
         {% if messages %}
@@ -68,7 +68,7 @@
       </div>
     </div>
   </main>
-  <footer class="footer py-3 text-center bg-primary">
+  <footer class="footer py-3 text-center bg-primary mt-3">
     <div class="container">
       <div class="row">
         <!-- Slogan -->
@@ -104,6 +104,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="{% static 'js/messages.js' %}"></script>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
