--- a/books/templates/books/about.html
+++ b/books/templates/books/about.html
@@ -15,6 +15,7 @@
         <li class="list-group-item ">User-friendly book rental and purchase options.</li>
         <li class="list-group-item ">A personalized reading experience with recommendations and reviews.</li>
         <li class="list-group-item ">Community engagement through our blog and discussion forums.</li>
+        <li class="list-group-item ">Messenger app  to connect with other readers in the community.</li>
       </ul>
 
       <h2 class="mt-4">Our Vision</h2>
