--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -45,7 +45,7 @@
     </form>
   </div>
 </div>
-<h2 class="text-center mt-4">Our Collection</h2>
+<h2 class="text-center mt-4">Our Book Collection</h2>
 <div class="row">
   {% for book in books %}
   <div class="col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-center flex-md-row flex-md-wrap">
