--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -31,7 +31,7 @@
       <div class="col-lg-6">
         <div class="mt-md-4 mt-3">
           <h2 class="text-center">Discover Our Collection</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <p class="text-center">Enjoy the pleasure of reading wherever you are.</p>
           <img src="{% static 'images/assets/girl-3528292_640.webp' %}" class="img-thumbnail rounded-3 " alt="Woman reading on a river side">
         </div>
         <div class="text-center">
@@ -43,7 +43,7 @@
   <div class="container mt-4 p-3 mb-3">
     <div class="col-lg-12 text-center">
       <h2 class="text-center my-3">Discover Our Universe</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ex, ullam voluptas mollitia tempore, quasi magnam eos provident officiis dolor quisquam debitis aut adipisci? Sit mollitia sint eum laboriosam eius?</p>
+      <p>From renting a book to post on our blog, manage your rentals and chat publicly on our blog or privately on our messaging application, you decide how, but enjoy yourself like a child creating your own universe.</p>
       <img src="{% static 'images/assets/reading-5069826_640.webp' %}" class="img-thumbnail rounded-3 " alt="Child reading on the bed">
     </div>
   </div>
