--- a/users/templates/users/Admin_users.html
+++ b/users/templates/users/Admin_users.html
@@ -1,6 +1,6 @@
 {% extends 'books/base.html' %}
 {% block content %}
-<div class="container mb-2">
+<div class="container mt-4 border border-3 border-black rounded-4 bg-body-secondary p-3">
   <div>
     <form method="GET" action="{% url 'admin_users' %}">
       <div class="input-group mb-3">
