--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -19,7 +19,7 @@
           <div class="mt-2">
             <a class="btn btn-success" href="{% url 'post-create' %}">New Post</a>
             {% if unread_messages_count > 0 %}
-            <a href="{% url 'inbox' %}">
+            <a href="{% url 'inbox' %}" class="text-danger ms-2">
               <i class="bi bi-envelope-arrow-up-fill"></i>
               <span>{{ unread_messages_count }}</span>
             </a>
