--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -27,8 +27,8 @@
 
     <!-- Submit Button -->
     <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Update</button>
-      <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Cancel</button>
+      <button class="btn btn-success" type="submit">Update</button>
+      <button class="btn btn-danger" type="button" onclick="history.back()">Cancel</button>
     </div>
   </form>
 </div>
