--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -3,26 +3,25 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="login-container">
-    <div class="login-content">
-        <form method="POST" class="form-login">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4 text-center">Login</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group m-3 text-center">
-                <button class="btn btn-primary" type="submit">Login</button>
-                <small class="text-muted ms-2">
-                    <a href="{% url 'password_reset' %}" class="btn btn-danger">Forgot Password?</a>
-                </small>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Need An Account? <a class="ms-2 btn btn-success" href="{% url 'register' %}">Sign Up Now</a>
-            </small>
-        </div>
+  <div class="login-content">
+    <form method="POST" class="form-login">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4 text-center">Login</legend>
+        {{ form|crispy }}
+      </fieldset>
+      <div class="form-group m-3 text-center">
+        <button class="btn btn-primary" type="submit">Login</button>
+        <small class="text-muted ms-2">
+          <a href="{% url 'password_reset' %}" class="btn btn-danger">Forgot Password?</a>
+        </small>
+      </div>
+    </form>
+    <div class="border-top pt-3">
+      <small>
+        Need An Account? <a class="ms-2 btn btn-success" href="{% url 'register' %}">Sign Up Now</a>
+      </small>
     </div>
+  </div>
 </div>
 {% endblock content %}
-
