--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -42,7 +42,7 @@
   </div>
   <div class="container mt-4 p-3 mb-3">
     <div class="col-lg-12 text-center">
-      <h2 class="text-center my-3">Discover Our Universe</h2>
+      <h2 class="text-center my-3">Enjoy Our Universe</h2>
       <p>From renting a book to post on our blog, manage your rentals and chat publicly on our blog or privately on our messaging application, you decide how, but enjoy yourself like a child creating your own universe.</p>
       <img src="{% static 'images/assets/reading-5069826_640.webp' %}" class="img-thumbnail rounded-3 " alt="Child reading on the bed">
     </div>
