--- a/users/templates/users/user_detail1.html
+++ b/users/templates/users/user_detail1.html
@@ -1,6 +1,6 @@
 {% extends "books/base.html" %}
 {% load crispy_forms_tags %}
-
+{% load static %}
 {% block content %}
 
 <div class="container mt-4 border border-3 border-black rounded-4 bg-body-secondary">
