--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -64,7 +64,7 @@
       <input type="checkbox" name="is_available" id="id_is_available" {% if form.is_available.value %} checked {% endif %}
         class="form-check-input" />
       <button type="submit" class="btn btn-primary ms-md-2 ms-lg-5">Save Changes</button>
-      <a href="{% url 'book_list' %}" class="btn btn-danger ms-md-2 ms-lg-5">Back</a>
+      <a href="{% url 'book_admin' %}" class="btn btn-danger ms-md-2 ms-lg-5">Back</a>
     </div>
   </form>
 </div>
